# skynet

./: .gitignore  CHANGELOG.md  Makefile  README.md  logging.conf  pyproject.toml  requirements.txt
resources/: params.json
src/skynet/dataset/collections/: webscraping.py
src/skynet/models/: llama2.py
src/skynet/models/llama/: inference.py
